force-app/main/default/objects/workflow_Email__c/workflow_Email__c.object-meta.xml
<CustomObject>
    <description>StarTrack PoC for creating bulk Operations emails and representing those Emails (sent via WF) in the Case Feed</description>
    <label>Workflow Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>