force-app/main/default/objects/workflow_Email__c/fields/Body_Summary__c.field-meta.xml
<CustomField>
    <fullName>Body_Summary__c</fullName>
    <description>The first 255 characters of the Body for display in expanded feed (compact layout)</description>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>