force-app/main/default/objects/workflow_Email__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Workflow Emails</relationshipLabel>
    <relationshipName>Workflow_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>