force-app/main/default/objects/workflow_Email__c/fields/Consignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Number__c</fullName>
    <label>Consignment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>