force-app/main/default/objects/workflow_Email__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <formula>Case__r.Network__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depot</label>
    <type>Text</type>
</CustomField>