force-app/main/default/objects/workflow_Email__c/fields/Description_Of_Contents__c.field-meta.xml
<CustomField>
    <fullName>Description_Of_Contents__c</fullName>
    <description>StarTrack: Capture &quot;Description Of Contents&quot; to send email.</description>
    <label>Description Of Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>