force-app/main/default/objects/workflow_Email__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>