force-app/main/default/objects/workflow_Email__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Case__r.Recent_Contact_Mobile_Number__c 

/*Case__r.Recent_Caller_Phone_Number__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>