force-app/main/default/objects/workflow_Email__c/fields/Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Reg_Number__c</fullName>
    <formula>Case__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Number</label>
    <type>Text</type>
</CustomField>